--- a/Heimdall/app/src/main/res/layout/activity_settings.xml
+++ b/Heimdall/app/src/main/res/layout/activity_settings.xml
@@ -86,10 +86,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/button2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/update"
-            tools:layout_editor_absoluteY="309dp" />
+            app:layout_constraintTop_toBottomOf="@+id/button16" />
 
         <Button
             android:id="@+id/button"
