--- a/Heimdall/app/src/main/res/layout/field3.xml
+++ b/Heimdall/app/src/main/res/layout/field3.xml
@@ -8,6 +8,7 @@
     android:background="@android:drawable/editbox_dropdown_dark_frame"
     android:clickable="true"
     android:gravity="center"
+    android:onClick="toRecPage"
     android:text="STOCK"
     android:textColor="#F8F8F8"
     android:textSize="16dp" />
